# cryptoacademy-v3

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
configs/: assets.yaml  feeds.yaml
data/trials/: trials.jsonl
demo/: PLAN-v2.md  PLAN.md  README.md
demo/contracts/: site-data.md
demo/contracts/examples/: latest.json  metrics.json  track-record.json
demo/legacy/: canvas.html  courses.html  courses.jsx  daily-reports.html  daily-reports.jsx  index.html  landing.jsx  ml-model.html  ml-model.jsx
demo/site/: index.html  package-lock.json  package.json  vite.config.ts
demo/site/public/data/: briefs-index.json  report-2026-07-10.json
demo/site/scripts/: optimize-assets.mjs
demo/site/src/: App.tsx  main.tsx  styles.css  tokens.css
demo/site/src/components/: Ambient.tsx  Layout.tsx  Pending.tsx  SignalCard.tsx
demo/site/src/lib/: data.ts
docs/: audit-2026-07-11.md  b2-preregistration.md  b2-results.md  b2.1-preregistration.md  b2.1-results.md  gdelt-dataset.md  phase4-handoff.md  phase4-plan.md  plan-bot-v1-summary.html  plan-bot-v1.md  plan-bot-v2.md  plan-v3.md
docs/research/: bot-improvement-research-2026-07-16.md  datasets-catalog.md  feature-engineering.md  modelo-backtest-roadmap.md
docs/reviews/: 2026-07-15-audit-code.md  2026-07-15-audit-methodology.md  2026-07-15-audit-redteam.md  2026-07-15-audit-return-levers.md  2026-07-15-audit-strategy-scout.md  2026-07-15-audit-synthesis.md  2026-07-15-b2-prerun-lookahead-review.md  2026-07-15-plan-review-coherence.md  2026-07-15-plan-review-security-ops.md  2026-07-15-plan-review-statistics.md
scripts/: b21_evaluate.py  b2_evaluate.py  register_tasks.ps1
src/cryptoacademy/: __main__.py  cli.py  config.py  contract.py  localai.py
src/cryptoacademy/data/: altdata.py  binance_vision.py  fng.py  macro_onchain.py  open_interest.py
src/cryptoacademy/features/: derivatives.py  matrix.py  news.py  price.py  resample.py  volatility.py
src/cryptoacademy/labels/: core.py  generate.py
src/cryptoacademy/models/: chronos_bench.py  dataset.py  dl.py  meta.py  sweep.py  train.py
src/cryptoacademy/news/: anonymize.py  collector.py  gdelt.py  pit.py  regime.py  scoring.py  store.py
src/cryptoacademy/notify/: telegram.py
src/cryptoacademy/validation/: cv.py  regime_gates.py  registry.py  stats.py
tests/: test_audit_fixes.py  test_b2_engine.py  test_binance_parsing.py  test_contract.py  test_cv.py  test_etf_flows.py  test_feature_causality.py  test_gdelt.py  test_labels.py  test_localai_gate.py  test_matrix_asof.py  test_matrix_tamper.py  test_news_features.py  test_open_interest_archive.py  test_pit_leakage.py  test_published_at.py  test_scoring.py  test_stats.py  test_store.py
(+4 files in other folders)
